@@ -1,6 +1,11 @@
 2007-02-28  Alexander Larsson  <alexl@redhat.com>
 
 	* xdg-user-dirs-update.c:
+	Add support for setting a directory (--set)
+	
+2007-02-28  Alexander Larsson  <alexl@redhat.com>
+
+	* xdg-user-dirs-update.c:
 	Add support for --dummy-output.
 	Save used locale on initial write or forced write.
 
